GenericSetup Product Changelog

  GenericSetup 1.4.0 (unreleased)

    - Added default values to the registerProfile ZCML directive.

    - Add a ZMI interface to find and remove invalid steps from the
      persistent registries.

    - All GenericSetup import and export steps are now registered globally.

    - Remove duplicated test (https://bugs.launchpad.net/zope-cmf/+bug/174910)

    - Don't create empty 'import_steps.xml' and 'export_steps.xml' files.

    - Fix relative paths for profile dependencies.

    - Add support for context dependencies in profiles.

    - Deprecate the version field for import steps.

    - Deprecate reading of version.txt to get the version for a profile.

    - Fire events before and after importing.

    - Use zcml to register import and export steps.


  GenericSetup 1.3.3 (unreleased)

    - Be more careful in checking context id validity.

    - tool: Fixed toolset import handler not to initialize tools again, when
      they already exist in the site.


  GenericSetup 1.3.2 (2007/09/11)

    - Ignore import and export step handlers that we can not resolve.

    - Restore the import context after running steps from a profile
      so we do not break on nested calls.

    - components: Provide log output when purging utilities or adapters.

    - components: Fixed an undefined variable name in a log message.


  GenericSetup 1.3.1 (2007/08/08)

    - components: correct the object path for the site root to be the
      empty string.

    - components: Made output more diff friendly.

    - utils: Added warnings to old code.
      ImportConfiguratorBase and ExportConfiguratorBase will become deprecated
      as soon as GenericSetup itself no longer uses them. HandlerBase is now
      deprecated.

    - components: Added 'components_xmlconfig.html' form.
      This view allows to inspect and edit component registrations. It is also
      available under the ZMI tab 'manage_components'.


  GenericSetup 1.3 (2007/07/26)
